--- a/estilos.css
+++ b/estilos.css
@@ -131,9 +131,18 @@ p {
     z-index: 500;
 }
 
-.dos {
-    width: 300px;
-    height: 500px;
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+.embed-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .mapa{
     display: flex;
